added back links

--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,7 @@
     <title>Contact page</title>
 </head>
 <body>
-    <h1>CONTACT ME!</h1>
-    
+    <h1>ABOUT ME</h1>
+    <a href="/static/">Back to the static!</a>
 </body>
 </html>
