--- a/public/home.html
+++ b/public/home.html
@@ -7,8 +7,10 @@
     <title>Lukas home page</title>
 </head>
 <body>
-ß
+
     <h1>You have reached public/home.html :)</h1>
- 
+
+    <a href="/static/">Back to the static!</a>
+
 </body>
 </html>
